--- a/css/style.css
+++ b/css/style.css
@@ -4,29 +4,24 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-/* body{
+body{
     width: 100%;
     height: 100%;
-} */
-
-
-
-.bannerVideo{
-    width: 100%;
-    height: 300px;
-    background-color: black;
-
 }
 
-.bannerVideo video{
-    position: relative;
+
+
+.baner{
     width: 100%;
-    height: 300px;
-    margin-top: -15%;
+    height: 400px;
     
-    
-   
 }
+
+.baner img{
+    width: 100%;
+    height: 400px;
+}
+
 
 /* Submenu */
 .submenu {
@@ -54,6 +49,7 @@
     align-items: center;
     justify-content: center;
     
+    
 }
 
 .container{
@@ -73,7 +69,8 @@
     cursor: pointer;
     overflow: hidden;
     border-radius: 2rem;
-    margin: 0 10px;
+    margin: 0 5px;
+    padding: 5%;
     display: flex;
     align-items: flex-end;
     transition: .6s cubic-bezier(.28,-0.03,0,.99);
@@ -100,7 +97,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 15px;
+    /* margin: 15px; */
 }
 
 
@@ -133,7 +130,7 @@ input {
 
 input:checked + label {
     
-    width: 860px;
+    width: 760px;
     height: 490px;
     
 }
@@ -152,30 +149,30 @@ input:checked + label .description {
     
 }
 .card[for="c2"] {
-    background-image: url('../imgs/img1.jpg');
+    background-image: url("../imgs/img1.jpg");
     background-position: inherit ;
     background-size: cover;
 }
 .card[for="c3"] {
-    background-image: url('../imgs/arabe.webp');
+    background-image: url("../imgs/img1.jpg");
     background-size: cover;
     
 }
 .card[for="c4"] {
-    background-image: url('../imgs/arabe.webp');
+    background-image: url("../imgs/img1.jpg");
     background-size: cover;
 }
 .card[for="c5"] {
-    background-image: url('../imgs/arabe.webp');
+    background-image: url("../imgs/img1.jpg");
     background-size: cover;
 }
 .card[for="c6"] {
-    background-image: url('../imgs/arabe.webp');
+    background-image: url("../imgs/img1.jpg");
 
     background-size: cover;
 }
 .card[for="c7"] {
-    background-image: url('../imgs/arabe.webp');
+    background-image: url("../imgs/img1.jpg");
     background-size: cover;
 }
 
