--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+
 }
 body{
     width: 100%;
@@ -12,9 +13,24 @@ body{
 
 
 .baner{
+    position: relative;
     width: 100%;
     height: 400px;
     
+}
+.lema{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    position: absolute;
+    margin-top: -15%;
+    margin-left: 10%;
+    color: darkgoldenrod;
+    
+    font-family: Georgia, 'Times New Roman', Times, serif;
+
+
 }
 
 .baner img{
@@ -97,7 +113,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* margin: 15px; */
+     /* margin: 15px;  */
 }
 
 
@@ -176,4 +192,117 @@ input:checked + label .description {
     background-size: cover;
 }
 
+/* Seccion hombre */
 
+.SeccionH{
+   
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height:500px;
+    background-image: url("../imgs/fondohombreok.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+    .SeccionH h5{
+        margin-left: 3%;
+        text-align: center;
+        width: 90%;
+        color: black;
+                
+    }
+    .SeccionH h2{
+        text-align: center;
+        color: darkgoldenrod;
+                
+    }
+
+/* Seccion mujeres */
+
+.SeccionM{
+   
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height:500px;
+    background-image: url("../imgs/fondomujer.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+    .SeccionM h2{
+        text-align: center;
+        color: darkgoldenrod;
+    }
+    .SeccionM h5{
+        margin-left: 3%;
+        text-align: center;
+        width: 90%;
+        color: wheat;
+    }
+
+/* Carrusel */
+
+.carrusel h1{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: darkgoldenrod;  
+    font-family: Georgia, 'Times New Roman', Times, serif;
+
+
+}
+
+.ok{
+    display: flex;
+    flex-direction: row;
+    padding: 3%;
+    text-align: center;
+    background-image: url("./img/fondo-rojo.avif");
+    /* background-position: 100%cqmin; */
+    /* background-position: initial; */
+    color: darkgoldenrod;
+
+
+}
+
+.tesCarrusel img{
+    width: 100%;
+    height: 300px;
+    padding: 3%;
+    display: flex;
+    font-size: xx-large;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+
+}
+
+
+.contfinal{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    background-color: black;
+    padding: 5%;
+    
+}
+
+    .contfinal h3{
+        color: darkgoldenrod;
+    }
+
+    .contfinal p{
+        color: white;
+    }
+    .contfinal h6{
+        color: darkgoldenrod;
+    }
