--- a/css/style.css
+++ b/css/style.css
@@ -6,21 +6,34 @@
 
 }
 body{
+    position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: rgb(9,9,9);
-background: linear-gradient(430deg, rgba(9,9,9,1) 29%, rgba(158,117,16,1) 100%);
+
 }
 
 
 
 .baner{
-    position: relative;
+    
+    background-image: url("../imgs/Mockuo\ Banner.jpg");
+    background-position: 15% 27%;
+    /* background-size: cover; */
+    /* position: relative; */
     width: 100%;
-    height: 400px;
+    height: 80%;
     
 }
+
+.baner img{
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+
+}
 .lema{
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -43,8 +56,9 @@ background: linear-gradient(430deg, rgba(9,9,9,1) 29%, rgba(158,117,16,1) 100%);
 
 /* Submenu */
 .submenu {
+    position: absolute;
     width: 100%;
-    background-color: black;
+    /* background-color: black; */
     
 }
 
@@ -206,6 +220,7 @@ input:checked + label .description {
     background-image: url("../imgs/fondohombreok.webp");
     background-size: cover;
     background-repeat: no-repeat;
+    backdrop-filter: opacity(80%);
     
 }
 
@@ -234,6 +249,7 @@ input:checked + label .description {
     background-image: url("../imgs/fondomujer.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    filter: brightness(80%);
     
 }
 
@@ -310,3 +326,124 @@ input:checked + label .description {
     }
 
 
+/* cards_catalogo */
+.cards{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: aliceblue;
+}
+.container{
+    height: 100%;
+    max-width: 1200px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 10%;
+    gap: 10px;
+
+}
+
+.card{
+    height: 350px;
+    width: 300px;
+    margin: 10px;
+    transition: 300ms;
+    
+
+}
+
+ .personaje, .personaje_2, .personaje_3 {
+
+    height: 350px;
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10%;
+    background-color:darkgoldenrod;
+    transition: 300ms;
+    
+    /* position: absolute; */
+
+
+} 
+
+.imagen_personaje{
+    height: 350px;
+    width: 250px;
+    background-image: url("../imgs/hombre/Ilmin\ -\ IlEgo-caja.jpeg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-bottom: 200px;
+    /* transition: 300ms; */
+    filter: drop-shadow(5px -4px 10px #000);
+}
+
+.imagen_personaje_2{
+    height: 350px;
+    width: 250px;
+    background-image: url("../imgs/hombre/AlHaramain\ L┬┤Aventure.webp");
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-bottom: 200px;
+    transition: 300ms;
+    filter: drop-shadow(5px -4px 10px #000);
+
+}
+.imagen_personaje_3{
+    height: 350px;
+    width: 250px;
+    background-image: url("../imgs/hombre/Bharara-King.png.webp");
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-bottom: 200px;
+    transition: 300ms;
+    filter: drop-shadow(5px -4px 10px #000);
+
+}
+.detalle, .detalle_2, .detalle_3 {
+    height: 200px;
+    width: 300px;
+    background-color: white;
+    color: black;
+    position: absolute;
+    border-bottom-left-radius: 10%;
+    border-bottom-right-radius: 10%;
+    margin-top: 150px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    gap: 10px;
+    /* display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    transition: 300ms; */
+}
+
+/* hover */
+
+.car :hover .imagen_personaje{
+    transform: translateY(-40px);
+    transition: 300ms;
+    filter: none;
+    background-image: url("../imgs/hombre/Ilmin-IlEgo.jpeg");
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.car :hover .imagen_personaje_2{
+    transform: translateY(-40px);
+    transition: 300ms;
+    filter: none;
+    background-image: url("../imgs/hombre/BHARARA\ BLEU.webp");
+}
+
+
+.car :hover .imagen_personaje_3{
+    transform: translateY(-40px);
+    transition: 300ms;
+    filter: none;
+    background-image: url("../imgs/hombre/BHARARA\ BLEU.webp");
+}
