--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ body{
 
 .wrapper{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -85,52 +85,55 @@ body{
 }
 
 .container{
-  
+    width: 100%;
     height: 400px;
     display: flex;
     flex-wrap: nowrap;
-    
-     
-    
-
 }
+
+.container{
+    @media  (max-width: 900px) {
+    width: 80%;
+    /* margin-left: -12%; */
+  }
+} 
 .card{
-    width: 80px;
+    width: 10%;
     border-radius: .75rem;
     background-size: cover;
     cursor: pointer;
     overflow: hidden;
     border-radius: 2rem;
     margin: 0 5px;
-    padding: 5%;
+    /* padding: 5%; */
     display: flex;
     align-items: flex-end;
-    transition: .6s cubic-bezier(.28,-0.03,0,.99);
+    transition: .3s cubic-bezier(.28,-0.03,0,.99);
     box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
     
     
     
 }
 
-.card > .row {
+/* .card > .row {
     
     color:white;
     display: flex;
     flex-wrap: initial;
     justify-content: center;
     
-}
+} */
 
-.card > .row > .icon {
-    /* background: #223;
-    color: black; */
+/* .card > .row > .icon {
+    background: #223;
+    color: black; 
     border-radius: 50%;
     width: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-     /* margin: 15px;  */
-}
+     margin: 15px; 
+} */
 
 
 .card > .row > .description {
@@ -141,12 +144,12 @@ body{
     height: 80px;
     width: 520px;
     opacity: 0;
-    transform: translateY(10px);
+    transform: translateY(50px);
     transition-delay: .3s;
     transition: all .3s ease;
     
 }
-.description p {
+/* .description p {
     color:black;
     padding-top: 5px;
 
@@ -154,7 +157,7 @@ body{
 
 .description h4 {
     text-transform: uppercase;
-}
+} */
 
 input {
     display: none;
@@ -162,16 +165,39 @@ input {
 
 input:checked + label {
     
-    width: 760px;
-    height: 490px;
+    width: 860px;
+    height: 400px;
     
 }
 
+/* input:checked + label {
+    @media  (max-width: 950px) {
+    width: 11700px;
+    height: 700px;
+    
+  }
 
-input:checked + label .description {
+} */
+input:checked + label {
+    @media  (max-width: 1150px) {
+    width: 7700px;
+    height: 600px;
+    
+  }
+
+}
+input:checked + label {
+    @media  (max-width: 900px) {
+    width: 15700px;
+    height: 380px;
+    
+  }
+
+}
+/* input:checked + label .description {
     opacity: 1 !important;
     transform: translateY(0) !important;
-}
+} */
 
 
 .card[for="c1"] {
@@ -339,6 +365,7 @@ input:checked + label .description {
     justify-content: center;
     align-items: center;
     background-color: aliceblue;
+    
 }
 .container{
     height: 100%;
@@ -375,6 +402,7 @@ input:checked + label .description {
 
 
 } 
+ /* imgenes */
 
 .imagen_personaje{
     height: 350px;
@@ -428,6 +456,7 @@ input:checked + label .description {
     grid-template-rows: 1fr 1fr 1fr;
     transition: 300ms; */
 }
+
 
 /* hover */
 
