--- a/css/style.css
+++ b/css/style.css
@@ -683,6 +683,37 @@ input:checked + label {
          width: 100%;
      }
      
+     .card{
+        width: 10%;
+        border-radius: .75rem;
+        background-size: cover;
+        cursor: pointer;
+        overflow: hidden;
+        border-radius: 2rem;
+        margin: 0 5px;
+        /* padding: 5%; */
+        display: flex;
+        align-items: center;
+        transition: .3s cubic-bezier(.28,-0.03,0,.10);
+        box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
+        
+        
+        
+    }
+    
+    
+    input {
+        display: none;
+    }
+    
+    input:checked + label {
+        
+        width: 1000px;
+        height: 400px;
+        background-position: center;
+        
+    }
+    
 }
  
  
