--- a/css/style.css
+++ b/css/style.css
@@ -712,13 +712,13 @@ input:checked + label {
         margin-top: -5%;
         
     }
-    .contenido-banner h6{
+    /* .contenido-banner h6{
         display: none;
-    }
+    } */
     /* .inicio{
         top: -10%;
         height: 300px;
-    } */
+   } */
  }
  @media screen and (max-width:850px) {
      .contenedor{
